results/SVCOMP/4-shot/log-ExSymExe25-2024_03_18_19_21_35.txt
class Main {

  /*@ public normal_behavior
    @ requires true;
    @ ensures \result == test(a, b, a);
  @*/
  public static boolean f() {
    int a = 3;
    Main inst = new Main();
    int b = 8;
    return inst.test(a, b, a);
  }

  /*@ public normal_behavior
    @ requires true;
    @ ensures \result == true;
  @*/
  public boolean test(int x, int y, int z) {
    System.out.println("Testing ExSymExe25");
    y = z + 1;
    z = z + x;
    x = x + 3;
    if (z > 0) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x > 0) System.out.println("branch BOO1");
    else {
      return false;
    }

    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe25.java:5: error: cannot find symbol
    @ ensures \result == test(a, b, a);
                              ^
  symbol:   variable a
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe25.java:5: error: cannot find symbol
    @ ensures \result == test(a, b, a);
                                 ^
  symbol:   variable b
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe25.java:5: error: cannot find symbol
    @ ensures \result == test(a, b, a);
                                    ^
  symbol:   variable a
  location: class Main
3 errors

